<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/loginBackground"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:textColor="#F1F1F1"
            android:textSize="50dp"
            android:text="OnlineGo "
            android:layout_gravity="center_horizontal"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/LoginLabel"
            android:id="@+id/usernameLayout"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Username"
                android:textColor="#FFFFFF"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/LoginLabel"
            android:id="@+id/passwordLayout"
            android:visibility="gone"
            tools:visibility="visible"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/LoginLabel"
            android:id="@+id/emailLayout"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email (optional)"
                android:textColor="@color/colorTextBackground"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_to_ogs"
            android:textColor="@color/loginText"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape_default_rounded"
            app:spinning_bar_color="@color/colorPrimary"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="4dp"
            app:initialCornerAngle="50dp"
            app:finalCornerAngle="50dp"
            android:enabled="false"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Google Sign-in"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="@drawable/button_shape_default_rounded"
            android:layout_marginTop="4dp"
            android:textColor="@color/loginText"
            />
        <Button
            android:id="@+id/facebookSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facebook Sign-in"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="@drawable/button_shape_default_rounded"
            android:layout_marginTop="4dp"
            android:textColor="@color/loginText"
            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:id="@+id/noAccountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_account_prompt"
            android:textColor="@color/colorPrimaryLight"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</ScrollView>